# drone_swarm

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/simulator/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
config/: env_template.txt
include/drone_swarm/: autonomous_vehicle.hpp  camera_feed.hpp  configuration.hpp  drone_aircraft.hpp  drone_state.hpp  earth_region.hpp  logging.hpp  overwatch_node.hpp  overwatch_orchestrator.hpp  rendering_pipeline.hpp  simulation_runtime.hpp  telemetry_bus.hpp  tile_service_factory.hpp  types.hpp  version.hpp
src/drone_swarm/: CMakeLists.txt  autonomous_vehicle.cpp  camera_feed.cpp  configuration.cpp  drone_aircraft.cpp  drone_state.cpp  earth_region.cpp  logging.cpp  overwatch_node.cpp  overwatch_orchestrator.cpp  rendering_pipeline.cpp  simulation_runtime.cpp  telemetry_bus.cpp  tile_service_factory.cpp
tests/: CMakeLists.txt  logging_test_fixture.hpp  test_drone_state.cpp  test_overwatch.cpp
